[workspace]
# A separate workspace

[package]
name = "sea-query-sqlx"
version = "0.8.0-rc.11"
authors = [ "Valentin Tolmer <valentin@tolmer.fr>", "Ivan Krivosheev <py.krivosheev@gmail.com>" ]
edition = "2024"
description = "Driver library for using SeaQuery with SQLx"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/sea-query"
repository = "https://github.com/SeaQL/sea-query"
categories = [ "database" ]
keywords = [ "database", "sql", "mysql", "postgres", "sqlite" ]
rust-version = "1.85.0"

[lib]

[dependencies]
sea-query = { version = "1.0.0-rc.10", path = "..", default-features = false, features = ["thread-safe"] }
sqlx = { version = "0.8", default-features = false, optional = true }
ipnetwork = { version = "0.20", default-features = false, optional = true } # pin dependency
pgvector = { version = "0.4", default-features = false, optional = true } # requires feature flag

[features]
sqlx-mysql = ["sqlx/mysql"]
sqlx-postgres = ["sqlx/postgres"]
sqlx-sqlite = ["sqlx/sqlite"]
sqlx-any = ["sqlx/any"]
with-chrono = ["sqlx?/chrono", "sea-query/with-chrono"]
with-json = ["sqlx?/json", "sea-query/with-json"]
with-rust_decimal = ["sqlx?/rust_decimal", "sea-query/with-rust_decimal"]
with-bigdecimal = ["sqlx?/bigdecimal", "sea-query/with-bigdecimal"]
with-uuid = ["sqlx?/uuid", "sea-query/with-uuid"]
with-time = ["sqlx?/time", "sea-query/with-time"]
with-ipnetwork = ["sqlx?/ipnetwork", "sea-query/with-ipnetwork"]
with-mac_address = ["sqlx?/mac_address", "sea-query/with-mac_address"]
postgres-array = ["sea-query/postgres-array"]
postgres-vector = ["sea-query/postgres-vector", "pgvector/sqlx"]
runtime-async-std = ["sqlx?/runtime-async-std"]
runtime-async-std-native-tls = ["sqlx?/runtime-async-std-native-tls"]
runtime-async-std-rustls = ["sqlx?/runtime-async-std-rustls", ]
runtime-actix = ["sqlx?/runtime-tokio"]
runtime-actix-native-tls = ["sqlx?/runtime-tokio-native-tls"]
runtime-actix-rustls = ["sqlx?/runtime-tokio-rustls"]
runtime-tokio = ["sqlx?/runtime-tokio"]
runtime-tokio-native-tls = ["sqlx?/runtime-tokio-native-tls"]
runtime-tokio-rustls = ["sqlx?/runtime-tokio-rustls"]


[package.metadata.docs.rs]
all-features = true
