[workspace]
# A separate workspace

[package]
name = "sea-query-sqlx"
version = "0.9.0"
authors = [ "Valentin Tolmer <valentin@tolmer.fr>", "Ivan Krivosheev <py.krivosheev@gmail.com>" ]
edition = "2024"
description = "Driver library for using SeaQuery with SQLx"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/sea-query"
repository = "https://github.com/SeaQL/sea-query"
categories = [ "database" ]
keywords = [ "database", "sql", "mysql", "postgres", "sqlite" ]
rust-version = "1.94.0"

[lib]

[dependencies]
sea-query = { version = "1.0.0", path = "..", default-features = false, features = ["thread-safe"] }
sqlx = { version = "0.9", default-features = false, optional = true }
ipnetwork = { version = "0.21.1", default-features = false, optional = true } # pin dependency
pgvector = { version = "0.4.2", default-features = false, optional = true } # requires feature flag
jiff = { version = "0.2.15", default-features = false, optional = true, features = ["std", "perf-inline"] }
# TODO: Re-enable in `with-jiff` when jiff-sqlx releases sqlx 0.9 support.
# jiff-sqlx 0.1.1 still depends on sqlx 0.8.
jiff-sqlx = { version = "0.1", optional = true }

[features]
sqlx-mysql = ["sqlx/mysql"]
sqlx-postgres = ["sqlx/postgres", "sea-query/backend-postgres"]
sqlx-sqlite = ["sqlx/sqlite"]
sqlx-any = ["sqlx/any"]
with-chrono = ["sqlx?/chrono", "sea-query/with-chrono"]
with-json = ["sqlx?/json", "sea-query/with-json"]
with-rust_decimal = ["sqlx?/rust_decimal", "sea-query/with-rust_decimal"]
with-bigdecimal = ["sqlx?/bigdecimal", "sea-query/with-bigdecimal"]
with-uuid = ["sqlx?/uuid", "sea-query/with-uuid"]
with-time = ["sqlx?/time", "sea-query/with-time"]
with-ipnetwork = ["sqlx?/ipnetwork", "sea-query/with-ipnetwork"]
with-mac_address = ["sqlx?/mac_address", "sea-query/with-mac_address"]
with-jiff = ["sea-query/with-jiff", "jiff"]
unimplemented-jiff-sqlx = []
unimplemented-jiff-sqlx-mysql = ["unimplemented-jiff-sqlx"]
postgres-array = ["sea-query/postgres-array"]
postgres-vector = ["sea-query/postgres-vector", "dep:pgvector"]
runtime-async-std = ["sqlx?/runtime-async-std"]
runtime-actix = ["sqlx?/runtime-tokio"]
runtime-tokio = ["sqlx?/runtime-tokio"]
tls-none = ["sqlx?/tls-none"]
tls-native-tls = ["sqlx?/tls-native-tls"]
tls-rustls = ["sqlx?/tls-rustls"]
tls-rustls-aws-lc-rs = ["sqlx?/tls-rustls-aws-lc-rs"]
tls-rustls-ring = ["sqlx?/tls-rustls-ring"]
tls-rustls-ring-native-roots = ["sqlx?/tls-rustls-ring-native-roots"]
tls-rustls-ring-webpki = ["sqlx?/tls-rustls-ring-webpki"]

# TODO: Remove those features as a breaking change.
runtime-async-std-native-tls = ["runtime-async-std", "tls-native-tls"]
runtime-async-std-rustls = ["runtime-async-std", "tls-rustls"]
runtime-actix-native-tls = ["runtime-actix", "tls-native-tls"]
runtime-actix-rustls = ["runtime-actix", "tls-rustls"]
runtime-tokio-native-tls = ["runtime-tokio", "tls-native-tls"]
runtime-tokio-rustls = ["runtime-tokio", "tls-rustls"]


[package.metadata.docs.rs]
features = [
    "sqlx-mysql",
    "sqlx-postgres",
    "sqlx-sqlite",
    "sqlx-any",
    "with-chrono",
    "with-json",
    "with-rust_decimal",
    "with-bigdecimal",
    "with-uuid",
    "with-time",
    "with-ipnetwork",
    "with-mac_address",
    "postgres-array",
    "postgres-vector",
    "runtime-tokio",
    "tls-rustls",
]
