[package]
name = "sea-query-test"
version = "0.1.0"
authors = [ "Billy Chan <ccw.billy.123@gmail.com>" ]
edition = "2018"
publish = false

[dependencies]
sea-query = { path = ".." }
sqlx = { version = "0.4.0", default-features = false, features = [ "runtime-async-std-native-tls", "macros", "any", "mysql", "postgres", "sqlite", "tls", "migrate", "decimal" ] }
serde_json = "1.0"
async-std = "1.8"