[package]
name = "sea-query-cockroach-json-example"
version = "0.1.0"
edition = "2018"

[dependencies]
chrono = "^0"
postgres = "^0.19"
sea-query = { path = "../../", features = ["postgres", "postgres-chrono", "postgres-json", "postgres-uuid"] }
# NOTE: if you are copying this example into your own project, use the following line instead:
# sea-query = { version = "^0.9", features = ["postgres", "postgres-chrono", "postgres-json"] }
serde_json = "^1"