[workspace]
# A separate workspace

[package]
name = "sea-query-diesel-postgres-example"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
time = { version = "0.3.36", features = ["parsing", "macros"] }
serde_json = { version = "1" }
uuid = { version = "1", features = ["serde", "v4"] }
ipnetwork = { version = "0.21" }
mac_address = { version = "1.1" }
rust_decimal = { version = "1" }
bigdecimal = { version = "0.4" }
diesel = { version = "2.1.1", features = ["postgres"] }
sea-query = { path = "../.." }
sea-query-diesel = { path = "../../sea-query-diesel", features = [
  "postgres",
  "with-chrono",
  "with-json",
  "with-uuid",
  "with-time",
  "with-rust_decimal-postgres",
  "with-bigdecimal",
  "with-ipnetwork",
  "with-mac_address",
  "postgres-array",
] }

# NOTE: if you are copying this example into your own project, use the following line instead:
# sea-query = { version = "1.0.0-rc.1" }
# sea-query-diesel = { version = "0", features = [...] }
