[package]
name = "sea-query-postgres-example"
version = "0.1.0"
edition = "2018"

[dependencies]
sea-query = { path = "../../", features = ["postgres"] }
# NOTE: if you are copying this example into your own repository, use this following line instead:
# sea-query = { version = "*", features = ["postgres"] }
postgres = "0"