[package]
name = "sea-query-postgres-example"
version = "0.1.0"
edition = "2018"

[dependencies]
postgres = "^0.19"
sea-query = { path = "../../", features = ["postgres"] }
# NOTE: if you are copying this example into your own project, use the following line instead:
# sea-query = { version = "^0.12", features = ["postgres"] }