[package]
name = "sea-query-postgres-json-example"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "^0"
time = "^0.2"
uuid = { version = "^0", features = ["serde", "v4"] }
serde_json = "^1"
rust_decimal = { version = "^1" }
postgres = "^0.19"
sea-query = { path = "../../", features = [
    "postgres",
    "postgres-chrono",
    "postgres-json",
    "postgres-rust_decimal",
    "postgres-uuid",
    "postgres-array",
    "postgres-time",
] }
# NOTE: if you are copying this example into your own project, use the following line instead:
# sea-query = { version = "^0", features = [
#     "postgres",
#     "postgres-chrono",
#     "postgres-json",
#     "postgres-rust_decimal",
#     "postgres-uuid",
#     "postgres-time",
# ] }
