[workspace]
# A separate workspace

[package]
name = "sea-query-rusqlite-example"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "^0", default-features = false, features = ["clock"] }
time = { version = "^0.3", features = ["parsing", "macros"] }
serde_json = { version = "^1" }
# rusqlite only supports uuid 0
uuid = { version = "^1", features = ["serde", "v4"] }
# that's why we can only use an older version of sea-query
sea-query-rusqlite = { path = "../../sea-query-rusqlite", features = [
    "with-chrono",
    "with-json",
    "with-uuid",
    "with-time",
] }
sea-query = { path = "../..", features = [
    "with-chrono",
    "with-json",
    "with-uuid",
    "with-time",
] }
rusqlite = "^0.28"
