[workspace]
# A separate workspace

[package]
name = "sea-query-sqlx-any-example"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "^0", default-features = false, features = ["clock"] }
time = "^0.3"
uuid = { version = "^1", features = ["serde", "v4"] }
serde_json = "^1"
rust_decimal = { version = "^1" }
bigdecimal = { version = "^0.3" }
async-std = { version = "1.8", features = [ "attributes" ] }
sqlx = "^0.6"
sea-query = { path = "../../" }
sea-query-binder = { path = "../../sea-query-binder", features = [
    "sqlx-postgres",
    "sqlx-sqlite",
    "sqlx-mysql",
    "sqlx-any",
    "with-chrono",
    "with-json",
    "with-rust_decimal",
    "with-bigdecimal",
    "with-uuid",
    "with-time",
    "postgres-array",
    "runtime-async-std-native-tls",
] }

# NOTE: if you are copying this example into your own project, use the following line instead:
# sea-query = { version = "^0"}
# sea-query-binder = { version = "^0", features = [...] }
