[package]
name = "sea-query-sqlx-mysql-example"
version = "0.1.0"
edition = "2018"

[dependencies]
async-std = { version = "1.8", features = [ "attributes" ] }
sea-query = { path = "../../", features = ["sqlx-mysql"] }
# NOTE: if you are copying this example into your own project, use the following line instead:
# sea-query = { version = "^0.9", features = ["sqlx-mysql"] }

# To fix sqlx on unstable Rust:
# lexical-core = { version = "0.7.5" }

[dependencies.sqlx]
version = "^0.5"
default-features = false
features = [
    "runtime-async-std-native-tls",
    "macros",
    "mysql",
    "tls",
]
