[package]
name = "sea-query-sqlx-mysql-example"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "^0"
time = "^0.2"
uuid = { version = "^0", features = ["serde", "v4"] }
serde_json = "^1"
rust_decimal = { version = "^1" }
bigdecimal = { version = "^0.2" }
async-std = { version = "1.8", features = [ "attributes" ] }
sea-query = { path = "../../", features = [
    "sqlx-mysql",
    "with-chrono",
    "with-json",
    "with-rust_decimal",
    "with-bigdecimal",
    "with-uuid",
    "with-time",
] }
# NOTE: if you are copying this example into your own project, use the following line instead:
# sea-query = { version = "^0", features = [
#     "sqlx-mysql",
#     "with-chrono",
#     "with-json",
#     "with-rust_decimal",
#     "with-bigdecimal",
#     "with-uuid",
#     "with-time",
# ] }

# To fix sqlx on unstable Rust:
# lexical-core = { version = "0.7.5" }

[dependencies.sqlx]
version = "^0.5"
default-features = false
features = [
    "runtime-async-std-native-tls",
    "macros",
    "mysql",
    "tls",
    "chrono",
    "json",
    "decimal",
    "bigdecimal",
    "uuid",
    "time",
]
