[workspace]
# A separate workspace

[package]
name = "sea-query-sqlx-mysql-example"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
publish = false

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
time = { version = "0.3.36", features = ["macros"] }
uuid = { version = "1", features = ["serde", "v4"] }
serde_json = "1"
rust_decimal = { version = "1" }
bigdecimal = { version = "0.4" }
async-std = { version = "1.8", features = [ "attributes" ] }
sqlx = "0.8"
sea-query = { path = "../../" }
sea-query-binder = { path = "../../sea-query-binder", features = [
    "sqlx-mysql",
    "with-chrono",
    "with-json",
    "with-rust_decimal",
    "with-bigdecimal",
    "with-uuid",
    "with-time",
    "runtime-async-std-native-tls",
] }

# NOTE: if you are copying this example into your own project, use the following line instead:
# sea-query = { version = "1.0.0-rc.1" }
# sea-query-binder = { version = "0", features = [...] }
