[workspace]
# A separate workspace

[package]
name = "sea-query-sqlx-postgres-example"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "^0", default-features = false, features = ["clock"] }
time = { version = "^0.3", features = ["macros"] }
uuid = { version = "^1", features = ["serde", "v4"] }
serde_json = "^1"
rust_decimal = { version = "^1" }
bigdecimal = { version = "^0.3" }
ipnetwork = { version = "^0.19" }
mac_address = { version = "^1.1" }
async-std = { version = "1.8", features = [ "attributes" ] }
sea-query = { path = "../../" }
sea-query-binder = { path = "../../sea-query-binder", features = [
    "sqlx-postgres",
    "with-chrono",
    "with-json",
    "with-rust_decimal",
    "with-bigdecimal",
    "with-uuid",
    "with-time",
    "with-ipnetwork",
    "with-mac_address",
    "runtime-async-std-native-tls",
] }
# NOTE: if you are copying this example into your own project, use the following line instead:
# sea-query = { version = "^0", features = [...] }

[dependencies.sqlx]
version = "^0.6"
default-features = false
features = [
    "macros",
    "postgres",
    "tls",
    "chrono",
    "json",
    "decimal",
    "bigdecimal",
    "uuid",
    "time",
    "ipnetwork",
    "mac_address"
]
