[package]
name = "sea-query-sqlx-sqlite-example"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "^0"
time = "^0.2"
uuid = { version = "^0", features = ["serde", "v4"] }
serde_json = "^1"
async-std = { version = "1.8", features = [ "attributes" ] }
sea-query = { path = "../../", features = [
    "sqlx-sqlite",
    "with-chrono",
    "with-json",
    "with-uuid",
    "with-time",
] }
# NOTE: if you are copying this example into your own project, use the following line instead:
# sea-query = { version = "^0", features = [
#     "sqlx-sqlite",
#     "with-chrono",
#     "with-json",
#     "with-uuid",
#     "with-time",
# ] }

[dependencies.sqlx]
version = "^0.5"
default-features = false
features = [
    "runtime-async-std-native-tls",
    "macros",
    "sqlite",
    "chrono",
    "json",
    "uuid",
    "time",
]
